# joypad-to-obs

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  buildspec.json  setup.iss
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/workflows/: build-project.yaml  push.yaml
build-aux/: .run-format.zsh  run-clang-format  run-gersemi  run-swift-format
cmake/common/: buildspec_common.cmake
cmake/linux/: helpers.cmake
data/locale/: en-US.ini  pt-BR.ini  pt-PT.ini
scripts/: ci-local-windows.ps1
setup/: setup.iss
src/: joypad-actions.cpp  joypad-actions.h  joypad-config.cpp  joypad-config.h  joypad-dock.cpp  joypad-dock.h  joypad-input.cpp  joypad-input.h  joypad-plugin.cpp  joypad-ui.cpp  joypad-ui.h  plugin-support.c.in
